# RaceData

./: .gitignore  CITATION.cff  README.md  download_datasets.py  pyproject.toml  upload_to_hf.py
.github/: FUNDING.yml
.github/workflows/: update-datasets.yml
data/: virtual_safety_car_estimates.json
